[package]
name = "signalbus"
version = "0.1.0"
edition = "2024"

description = "SignalBus is a lightweight, local-first developer framework for structured signals and events. It enables processes, scripts, and applications on the same machine to communicate instantly through high-level signals without the overhead of HTTP APIs or message brokers."
license = "GPL-3.0"
repository = "https://github.com/arungeorgesaji/signalbus"

[dependencies]
anyhow = "1.0.100"
async-channel = "2.5.0"
clap = { version = "4.5.0", features = ["derive"] }
dirs = "6.0.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
